chore: polish SB4 migration